--- a/Em-breve.html
+++ b/Em-breve.html
@@ -9,11 +9,14 @@
 <body>
     <header>
         <nav>
-            <img src="image.png" alt="star" id="logo">
+            <a href="index.html" class="link"><img src="image.png" alt="star" id="logo">
             <div class="nome_do_site">
-                <strong>CURSOS-MG</strong>
+                <strong>CURSOS-MG</strong></a>
             </div>
         </nav>
     </header>
+    <div class="em-obra">
+        <img src="image copy 8.png" alt="em">
+    </div>
 </body>
 </html>
