--- a/Engenharia.html
+++ b/Engenharia.html
@@ -9,11 +9,51 @@
 <body>
     <header>
         <nav>
-            <img src="image.png" alt="star" id="logo">
+            <a href="index.html" class="link"><img src="image.png" alt="star" id="logo">
             <div class="nome_do_site">
-                <strong>CURSOS-MG</strong>
+                <strong>CURSOS-MG</strong></a>
             </div>
         </nav>
     </header>
+    <div>
+        <img class="fundo-engenharia" src="image copy 7.png" alt="plano de fundo">
+    </div>
+    <div class="text">O curso de Engenharia aplica conhecimentos científicos, matemáticos e tecnológicos para criar soluções técnicas e sociais. O profissional formado pode atuar em diversas áreas, como construção, manutenção, produção e desenvolvimento de produtos. 
+        <br><br><div class="Sub-titulos">Disciplinas básicas </div><br>
+        <ul>
+            <li>Matemática</li>
+            <li>Química</li>
+            <li>Física</li>
+            <li>Cálculo</li>
+            <li>Álgebra</li>
+            <li>Cálculo Diferencial e Integral</li>
+            <li>Cálculo Numérico</li>
+            <li>Probabilidade e Estatística</li>
+        </ul>  
+        <br><br><div class="Sub-titulos">Ciclo básico</div><br>
+        <ul>
+            <li>O ciclo básico é composto por disciplinas obrigatórias comuns a todos os cursos de Engenharia. </li>
+            <li>Tem normalmente a duração de 4 semestres (2 anos). </li>
+        </ul>
+         
+        <br><div class="Sub-titulos">Ciclo profissional</div><br>
+        <ul>
+            <li>É composto por disciplinas pertinentes a cada um dos cursos oferecidos. </li>
+            <li>Ao final da faculdade, cada curso possui seu direcionamento próprio de atuação no mercado de trabalho. </li>
+        </ul> 
+        <br><div class="Sub-titulos">Áreas de atuação </div><br>
+        <ul>
+            <li>Engenharia Civil</li>
+            <li>Engenharia Elétrica</li>
+            <li>Engenharia Mecânica</li>
+            <li>Engenharia Mecatrônica</li>
+            <li>Engenharia de Produção</li>
+            <li>Engenharia Química</li>
+            <li>Engenharia Ambiental</li>
+            <li>Engenharia da Computação</li>
+            <li>Engenharia de Controle e Automação</li>
+            <li>Engenharia de Petróleo</li>
+        </ul> 
+    </div>
 </body>
 </html>
