--- a/computação.html
+++ b/computação.html
@@ -9,11 +9,44 @@
 <body>
     <header>
         <nav>
-            <img src="image.png" alt="star" id="logo">
+            <a href="index.html" class="link"><img src="image.png" alt="star" id="logo">
             <div class="nome_do_site">
-                <strong>CURSOS-MG</strong>
+                <strong>CURSOS-MG</strong></a>
             </div>
         </nav>
     </header>
+    <div>
+        <img class="fundo-computação" src="image copy 5.png" alt="plano de fundo">
+    </div>
+    <div class="text">O curso de Computação, também chamado de Ciência da Computação, é uma graduação que prepara profissionais para o desenvolvimento de sistemas computacionais. 
+        <br><br><div class="Sub-titulos">Conteúdo do curso</div><br>
+        <ul>
+            <li>Estudo de algoritmos,sistemas de software,hardware e redes de computadores</li>
+            <li>Análise matemática de algoritmos e complexidade computacional</li>
+            <li>Programação de software</li>
+            <li>Administração de sistemas de computador</li>
+            <li>Segurança da informação</li>
+            <li>Engenharia de software</li>
+            <li>Sistemas distribuídos</li>
+        </ul>
+        <br><div class="Sub-titulos">Formação</div><br>
+        <ul>
+            <li>O curso de Computação pode ser do tipo bacharelado ou licenciatura </li>
+            <li>É possível cursar a graduação nas modalidades presencial e a distância </li>
+            <li>Os alunos têm acesso a laboratórios equipados, onde podem aplicar os conceitos teóricos em aulas práticas </li>
+        </ul>   
+        <br><div class="Sub-titulos">Oportunidades de carreira</div><br>
+        <ul>
+            <li>O curso de Computação prepara os alunos para oportunidades no setor tecnológico  </li>
+            <li>Os alunos podem se candidatar a bolsas de Iniciação Científica para desenvolver atividades de pesquisas  </li>
+        </ul> 
+        <br><div class="Sub-titulos">Oportunidades de carreira</div><br>
+        <ul>
+            <li>Desenvolvimento, implementação e gestão de sistemas e soluções computacionais </li>
+            <li>Análise de sistemas</li>
+            <li>Gestão de redes de dados</li>
+            <li>Segurança da informação</li>
+        </ul> 
+    </div>
 </body>
 </html>
