--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <header>
         <nav>
-            <img src="image.png" alt="star" id="logo">
+            <a href="index.html" class="link"><img src="image.png" alt="star" id="logo">
             <div class="nome_do_site">
-                <strong>CURSOS-MG</strong>
+                <strong>CURSOS-MG</strong></a>
             </div>
     </nav>
 </header>
