--- a/medicina.html
+++ b/medicina.html
@@ -9,11 +9,47 @@
 <body>
     <header>
         <nav>
-            <img src="image.png" alt="star" id="logo">
+            <a href="index.html" class="link"><img src="image.png" alt="star" id="logo">
             <div class="nome_do_site">
-                <strong>CURSOS-MG</strong>
+                <strong>CURSOS-MG</strong></a>
             </div>
         </nav>
     </header>
+    <div>
+        <img class="fundo-medicina" src="image copy 6.png" alt="plano de fundo">
+    </div>
+    <div class="text">O curso de Medicina é uma graduação que prepara o estudante para ser médico, profissional que diagnostica, trata e cuida de pacientes
+        <br><br><div class="Sub-titulos">Objetivos</div><br>
+        <ul>
+            <li>Prevenir e combater doenças</li>
+            <li>Manter a qualidade de vida</li>
+            <li>Promover o bem-estar</li>
+            <li>Contribuir para a prevenção de doenças</li>
+            <li>Desenvolver a consciência dos deveres éticos do médico</li>
+            <li>Desenvolver a ideia da necessidade de aperfeiçoamento profissional continuado</li>
+        </ul>  
+        <br><br><div class="Sub-titulos">Conteúdo do curso</div><br>
+        <ul>
+            <li>Anatomia</li>
+            <li> Biologia celular e molecular</li>
+            <li> Histologia</li>
+            <li>Embriologia</li>
+            <li>Imunologia</li>
+            <li>Patologia</li>
+            <li>Farmacologia</li>
+            <li>Traumatologia</li>
+        </ul>
+         
+        <br><div class="Sub-titulos">Estrutura</div><br>
+        <ul>
+            <li>O curso de Medicina tem duração de seis anos </li>
+            <li>O curso é dividido em três ciclos, cada um com dois anos de duração </li>
+            <li>As instituições de ensino têm parcerias com hospitais e clínicas, oferecendo aos estudantes a possibilidade de desenvolverem atividades práticas </li>
+        </ul> 
+        <br><div class="Sub-titulos">É necessário que vocÊ tenha</div><br>
+        <ul>
+            <li>Características do futuro médico Postura ética, Visão humanística, Senso de responsabilidade social, Compromisso com a cidadania, Habilidade de comunicação e de empatia. </li>
+        </ul> 
+    </div>
 </body>
 </html>
